--- a/client/src/Pages/Forum/ForumMain/ForumMain.css
+++ b/client/src/Pages/Forum/ForumMain/ForumMain.css
@@ -18,3 +18,12 @@
 .forummain .allThreads{
     padding-left: 1rem;
 }
+
+.filterdropdown{
+    padding-left: 1rem;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center;
+}
